k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cell-frequency
  namespace: cell-frequency
spec:
  selector:
    app: cell-frequency
  ports:
    - port: 80
      targetPort: 8000
